# MSU-Launcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
hashes/: gog.txt
src/: config.rs  main.rs  patcher_laa.rs  patcher_preload.rs  pe.rs
