[package]
name = "msu-launcher"
version = "0.5.0"
authors = ["Enduriel <endur1el@protonmail.com>"]
edition = "2021"
description = "CLI tool for patching Battle Brothers with 4GB LAA patch and mod preloading"

[[bin]]
name = "bb-patcher"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Core functionality
anyhow = "1.0.86"
sha2 = "0.10.8"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
const-hex = "1.12.0"

# Async for downloads
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
bytes = "1.6.0"

# Steam location (optional, for auto-detection)
steamlocate = { version = "=2.0.0-beta.2", optional = true }

[features]
default = ["steam-detect"]
steam-detect = ["steamlocate"]
